--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,11 @@
       </div>
     </div>
     <div class="container-fluid">
-      {{ content }}
+      <div id="content-row" class="row page">
+        <div class="col-md-12 col-xs-12">
+          {{ content }}
+        </div>
+      </div>
     </div>
     <div class="copyright">
       <p><strong>Citation:</strong> Yao, L., Wang, H., Song, Y. &amp; Sui, G. <a href="//doi.org/10.1093/bioinformatics/btx403" target="_blank">BioQueue: a novel pipeline framework to accelerate bioinformatics analysis</a>. <i>Bioinformatics</i> <b>33</b>, 3286–3288 (2017)</p>
