--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
       </div>
     </div>
     <div class="container-fluid">
-      <div id="content-row" class="row page">
+      <div id="content-row" class="row md-page">
         <div class="col-md-12 col-xs-12">
           {{ content }}
         </div>
