--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
     <div id="header">
       <div id="menu" class="container">
         <ul>
-          <li><a href="#" accesskey="1" title="">Homepage</a></li>
+          <li><a href="index.html" accesskey="1" title="">Homepage</a></li>
           <li><a href="https://github.com/liyao001/BioQueue" target="_blank" accesskey="2" title="">Get started</a></li>
           <li><a href="https://bioqueue.readthedocs.io/en/latest/" target="_blank" accesskey="3" title="">Documentation</a></li>
           <li><a href="http://bioqueue.nefu.edu.cn" target="_blank" accesskey="4" title="">Open platform</a></li>
